LAU-810 add more roles that considered citizen accounts